# airtable-mcp-server

./: .gitignore  .gitleaks.toml  Dockerfile  README.md  manifest.json  package-lock.json  package.json  server.json  smithery.yaml
.github/workflows/: ci.yaml  docker.yaml  dxt.yaml
python/: README.md  pyproject.toml
python/airtable_mcp/: __init__.py  api.py  client.py
src/: airtableService.test.ts  airtableService.ts  e2e.test.ts  index.test.ts  index.ts  main.ts  mcpServer.test.ts  server.ts  types.ts
src/resources/: index.ts
src/tools/: index.ts  list-records.ts  update-field.ts  upload-attachment.ts
src/transports/: shared.ts
