[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airtable-mcp"
version = "0.1.0"
description = "Python API for Airtable MCP Server - list bases/tables, CRUD records, search, comments, upload attachments via the Node MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["airtable_mcp"]
